# mdSilo-app

./: .gitignore  CHANGES.md  CONTRIBUTING.md  README.md  babel.config.js  global.d.ts  install.json  jest.config.js  jest.setup.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  jest.yml  lint.yml  release.yml  rust.yml  test.yml  tests.yml  ts.yml
ci-scripts/: updatelog.mjs  updater.mjs
public/: index.html  manifest.json  splashscreen.html
script/: cpbuild.js
src/: .eslintrc.js  App.test.tsx  App.tsx  index.tsx  react-app-env.d.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons (yellow)/: icon.icns
src-tauri/icons(green)/: icon.icns
src-tauri/migrations/init/: up.sql
src-tauri/src/: db.rs  feed.rs  files.rs  json.rs  lib.rs  main.rs  models.rs  paths.rs  pdf.rs  plugins.rs  schema.rs  storage.rs  tests.rs  tray.rs  window.rs
src-tauri/src/scripts/: init.js
src-tauri/src/tree/: mod.rs  node.rs  visitor.rs
src/__fixtures__/: notes.ts
src/__tests__/components/: Editor.test.tsx  graph.test.tsx
src/ai/: ChatBox.tsx  Config.tsx  TextBox.tsx
src/components/: App.tsx  Editor.tsx  HeatMap.tsx  Logo.tsx  chronicle.tsx  journals.tsx  md.tsx
src/components/dir/: DirDelModal.tsx  DirNewModal.tsx  DirRenameModal.tsx
src/components/editor/: AddLinkPopover.tsx  Editor.tsx  EditorPopover.tsx  ForceGraph.tsx  HoveringToolbar.tsx  ReadOnlyEditor.tsx  Title.tsx  Trait.tsx
src/components/editor/autocomplete/: BlockAutocompletePopover.tsx  HashTagAutocompletePopover.tsx  LinkAutocompletePopover.tsx  PubAutocompletePopover.tsx  SlashAutocompletePopover.tsx
src/components/editor/backlinks/: BacklinkMatchLeaf.tsx  BacklinkNoteBranch.tsx  Backlinks.tsx  BlockBacklinks.tsx
src/components/editor/blockmenu/: BacklinksPopover.tsx  BlockMenuDropdown.tsx  ChangeBlockOptions.tsx  TableModal.tsx  withBlockSideMenu.tsx
src/components/editor/elements/: BlockRefElement.tsx  CheckListItemElement.tsx  CodeBlockElement.tsx  EditorElement.tsx  EditorLeaf.tsx  ExternalLinkElement.tsx  ImageElement.tsx  NoteLinkElement.tsx  PubLinkElement.tsx  TableElement.tsx  (+2 more)
src/components/feed/: ArticleView.tsx  AudioPlayer.tsx  Channel.tsx  ChannelList.tsx  FeedManager.tsx  dataAgent.ts
src/components/kanban/: Board.tsx  Card.tsx  Column.tsx  types.ts  updateCard.ts
src/components/md/: LICENSE  Markdown.tsx  MonacoEditor.tsx  darkTheme.ts  useCodeMirror.ts
src/components/mindmap/: LICENSE  flextree.ts  mindmap.css  mindmap.tsx  parser.ts  view.ts
src/components/misc/: Dropdown.tsx  ErrorBoundary.tsx  Spinner.tsx  Toggle.tsx  Tree.tsx  TreeNode.tsx  TreeNodeElement.tsx  VirtualTree.tsx
src/components/note/: Markdown.tsx  Note.tsx  NoteDelModal.tsx  NoteExport.tsx  NoteHeader.tsx  NoteMetadata.tsx  NoteMoveInput.tsx  NoteMoveModal.tsx  NoteNewInput.tsx  NoteNewModal.tsx  NoteSumList.tsx  Title.tsx  Toc.tsx
src/components/reader/: ArticleView.tsx  Channel.tsx  ChannelList.tsx  FeedManager.tsx
src/components/settings/: AboutModal.tsx  BaseModal.tsx  EditorSettings.tsx  General.tsx  MsgModal.tsx  SettingsModal.tsx  SettingsToggle.tsx
src/components/sidebar/: BottomBar.tsx  OpenSidebarButton.tsx  SideMenu.tsx  Sidebar.tsx  SidebarContent.tsx  SidebarDropdown.tsx  SidebarExport.tsx  SidebarHeader.tsx  SidebarHistory.tsx  SidebarItem.tsx  SidebarNoteLink.tsx  SidebarNoteLinkDropdown.tsx  SidebarNotes.tsx  SidebarNotesBar.tsx  SidebarNotesSortDropdown.tsx  SidebarNotesTree.tsx  SidebarPlaylist.tsx  SidebarSearch.tsx  SidebarTab.tsx  SidebarTags.tsx  StatusBar.tsx
src/components/view/: ForceGraph.tsx  MainView.tsx  ai.tsx  chronicle.tsx  feed.tsx  graph.tsx  hashtags.tsx  journals.tsx  kanban.tsx  md.tsx  tasks.tsx  wrap.tsx
src/context/: useCurrentMd.tsx  useCurrentView.tsx  viewReducer.ts
src/editor/: checks.ts  constants.ts  formatting.ts  handleNoteId.ts  slate.ts
src/editor/backlinks/: deleteBacklinks.ts  updateBacklinks.ts  updateBlockBacklinks.ts  useBacklinks.ts  useBlockBacklinks.ts  useBlockReference.ts
src/editor/hooks/: useCurrent.tsx  useDeleteNote.ts  useExport.ts  useHotkeys.ts  useImport.ts  useNoteSearch.ts  useOnNoteLinkClick.ts  useOpen.ts  useRefresh.ts  useSummary.ts  useTagSearch.ts  useTasks.ts
src/editor/plugins/: withBlockBreakout.ts  withBlockReferences.ts  withCustomDeleteBackward.ts  withHtml.ts  withImages.ts  withLinks.ts  withNormalization.ts  withTable.ts  withTags.ts  withVoidElements.ts
src/editor/serialization/: deserialize.ts  normalize.ts  remarkToSlate.ts  serialize.ts
src/file/: directory.ts  files.ts  log.ts  open.ts  process.ts  storage.ts  util.ts  write.ts
src/lib/: store.ts  userSettings.ts  userSettingsSlice.ts
src/lib/api/: apiClient.ts  curdNote.ts  updateUser.ts
src/styles/: index.css  styles.css
src/test/: App.test.tsx
src/types/: model.ts
src/utils/: file-extensions.ts  helper.ts  image-extensions.ts  useAuth.tsx
(+36 files in other folders)
