[package]
name = "mdsilo"
version = "0.5.10"
description = "mdSilo Desktop"
authors = ["dloh"]
license = "AGPL-3.0-or-later"
repository = ""
default-run = "mdsilo"
edition = "2021"
rust-version = "1.78.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1.8.1", features = ["clipboard-all", "dialog-all", "protocol-all", "shell-all", "system-tray", "updater", "window-all"] }
trash = "5.2.1"
notify = "6.1.1"
open = "5.3.1"
bincode = "1.3.3"
chrono = "0.4.39"
whatlang = "0.16.4"
# walk dir
crossbeam = "0.8.4"
ignore = "0.4.23"
indextree = "4.7.3"
## rss reader
reqwest = { version = "0.12", features = ["json", "socks"] }
rss = { version = "2.0.11", features = ["serde"] }
atom_syndication = "0.12.6"
bytes = "1.9.0"
diesel = { version = "2.2.6", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
strip = true 
lto = true
opt-level = "s"
