[package]
name = "mdsilo"
version = "0.5.10"
description = "mdSilo Desktop"
authors = ["dloh"]
license = "AGPL-3.0-or-later"
repository = ""
default-run = "mdsilo"
edition = "2021"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tauri = { version = "1.8.3", features = ["clipboard-all", "dialog-all", "protocol-all", "shell-all", "system-tray", "updater", "window-all"] }
trash = "5.2.2"
notify = "6.1.1"
open = "5.3.2"
bincode = { version = "2.0", features = ["serde"] }
chrono = "0.4.41"
whatlang = "0.16.4"
# walk dir
crossbeam = "0.8.4"
ignore = "0.4.23"
indextree = "4.7.4"
## rss reader
reqwest = { version = "0.12.15", features = ["json", "socks"] }
rss = { version = "2.0.12", features = ["serde"] }
atom_syndication = "0.12.7"
bytes = "1.10.1"
diesel = { version = "2.2.10", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }

[dev-dependencies]
tokio = { version = "1.45.0", features = ["full"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
strip = true 
lto = true
opt-level = "s"
